k8s/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: authentication
  template:
    metadata:
      labels:
        component: authentication
    spec:
      containers:
        - name: authentication
          image: ocedal/authentication
          ports:
            - containerPort: 4001
