k8s/conversations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversations-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: conversations
  template:
    metadata:
      labels:
        component: conversations
    spec:
      containers:
        - name: conversations
          image: ocedal/conversations
          ports:
            - containerPort: 4004
