k8s/mongoConv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoconv-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoconv
  template:
    metadata:
      labels:
        app: mongoconv
    spec:
      containers:
      - image: mongo
        name: mongoconv
