k8s/react-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: react-app
          image: ocedal/react-app
          ports:
            - containerPort: 3000
