k8s/authentication-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-cluster-ip-service
spec:
  selector:
    component: authentication
  ports:
    - port: 4001
      targetPort: 4001
