k8s/contacts-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contacts-cluster-ip-service
spec:
  selector:
    component: contacts
  ports:
    - port: 4002
      targetPort: 4002
      protocol: TCP
