k8s/conversations-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conversations-cluster-ip-service
spec:
  selector:
    component: conversations
  ports:
    - port: 4004
      targetPort: 4004
      protocol: TCP
