k8s/gateway-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
spec:
  selector:
    component: gateway
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
