k8s/mongoAuth-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongoauth-service
spec:
  ports:
    - name: auth
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongoauth
