k8s/mongoConv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoconv-service
spec:
  ports:
    - name: conv
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongoconv
