k8s/mongoNoti-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongonoti-service
spec:
  ports:
    - name: noti
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongonoti
