k8s/notifications-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-cluster-ip-service
spec:
  selector:
    component: notifications
  ports:
    - port: 4003
      targetPort: 4003
      protocol: TCP
