k8s/react-app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
