k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: label-ingress
spec:
  rules:
    - http:
        paths:
          - path: /graphql
            backend:
              serviceName: "gateway-cluster-ip-service"
              servicePort: 4000
          - path: /auth/graphql
            backend:
              serviceName: "authentication-cluster-ip-service"
              servicePort: 4001
          - path: /cont/graphql
            backend:
              serviceName: "contacts-cluster-ip-service"
              servicePort: 4002
          - path: /noti/graphql
            backend:
              serviceName: "notifications-cluster-ip-service"
              servicePort: 4003
          - path: /conv/graphql
            backend:
              serviceName: "conversations-cluster-ip-service"
              servicePort: 4004
          - path: /convsock/socket.io/*
            backend:
              serviceName: "conversations-cluster-ip-service"
              servicePort: 4004
          - path: /notisock/socket.io/*
            backend:
              serviceName: "notifications-cluster-ip-service"
              servicePort: 4003
          - path: /*
            backend:
              serviceName: "react-app-cluster-ip-service"
              servicePort: 3000
